# control-panel_ps

./: .clang-format  .gitmodules  CMakeLists.txt
control_panel/: CMakeLists.txt
control_panel/src/: empty.cpp  main.cpp  task.hpp
control_panel/src/client/: client.cpp  client.hpp
control_panel/src/client_finder/: client_finder.cpp  client_finder.hpp
control_panel/src/common/: action_if_exists.hpp  context.hpp  function_traits.hpp  pc_adapters.hpp  task.hpp
control_panel/src/menu/: menu.cpp  menu.hpp
tests/: CMakeLists.txt
tests/src/protocol/: action_if_exists.cpp  function_traits.cpp  protocol_test.cpp  task.cpp
